--- a/Animated Character/style.css
+++ b/Animated Character/style.css
@@ -1,1 +1,253 @@
+#In this CSS file the animated character styling using CSS different-different property,keyframes,translation used
+
+*{
+    margin:0;
+    padding:0;
+    box-sizing: border-box;
+}
+body{
+    background-color:#f5b638;
+
+}
+.container{
+    position:absolute;
+    top: 50%;
+    left: 50%;
+    width: 31.25em;
+    height: 25em;
+    transform: translate(-50% , -50%);
+    perspective: 50em;
+     
+}
+.face{
+    position:absolute;
+    width:11.25em;
+    height: 7.5em;
+    background: #4d4dc4;
+    top:3.12em;
+    left:50%;
+    transform: translate(-50%);
+    border-radius: 0 0 3.12em 3.12em;
+}
+/*::before put at the starting of the element and ::after put at the end of the element*/
+.face::before,
+.face::after{
+    content:'';
+    position:absolute;
+    top: 1.87em;
+    width: 0.9em;
+    height: 0.4em;
+    border: 0.43em solid #181758;
+    border-radius: 1.25em 1.25em 0 0;
+    border-bottom: none;
+
+
+}
+.face::before{
+    left: 3.12em;
+}
+.face::after{
+    right:3.12em;
+}
+.left-ear,
+.right-ear{
+    position:absolute;
+    width: 0.93em;
+    height:1.87em;
+    background-color: #f589aa;
+    bottom: 6.87em;
+}
+.left-ear{
+    left: 0.62em;
+    border-radius: 0 3.75em 3.75em 0;
+    box-shadow: 0 0 0 0.62em #4d4dc4 , 4.18em 0.3em 0 -0.06em #4d4dc4;
+}
+.right-ear{
+    right: 0.62em;
+    border-radius:  3.75em 0 0 3.75em; 
+    box-shadow: 0 0 0 0.62em #4d4dc4 , -4.18em 0.3em 0 -0.06em #4d4dc4;
+}
+.left-ear::before{
+    content: '';
+    position: absolute;
+    top: 5em;
+    left: 4.37em;
+    width: 1.25em;
+    height: 1.25em;
+    background-color: #181758;
+    border-radius: 50%;
+    box-shadow: -2.18em 0 0 -0.37em #2f319f, 2.18em 0 0 -0.37em #2f319f, -3.43em 0 0 -0.37em #2f319f, 3.43em 0 0 -0.37em #2f319f;
+}
+.left-ear::after{
+    content: '';
+    position: absolute;
+    top: 8.74em;
+    left: 3.43em;
+    width: 3.12em;
+    height: 1.25em;
+    background-color: #2f319f;
+}
+.right-ear::before{
+    content: '';
+    position: absolute;
+    top: 12.18em;
+    left: -6.25em;
+    width: 5em;
+    height: 5em;
+    background-color: #97acf5;
+    box-shadow: 0 0 0 2.5em #4d4dc4;
+    border-radius: 1.87em;
+}
+.right-ear::after{
+    content: '';
+    position: absolute;
+    top:15.62em;    
+    left: -4.05em;
+    width: 0.62em;
+    height: 0.62em;
+    background-color:#4d4dc4 ;  
+    border-radius: 50%;
+}
+.hand-left{
+    position: absolute;
+    top:13.12em;
+    left:7.5em;
+    width: 6.25em;
+    height: 6.25em;
+    border: 1.25em solid #4d4dc4;
+    border-right:none;
+    border-bottom:none;
+    border-radius: 3.12em 0.62em 0.62em 0.62em;
+    animation: move-hand-left 6s infinite;
+    transform-origin: 104% 0;
+    transform-style: preserve-3d;
+}
+@keyframes move-hand-left{
+    50%{
+        transform: rotateX(180deg);
+    }
+}
+.hand-left::before{
+    content: '';
+    position: absolute;
+    bottom: -0.62em;
+    left: -0.62em;
+    width: 0.62em;
+    height: 1.25em;
+    background-color: #4d4dc4 ;
+    border-radius: 0.62em;
+}
+.hand-right{
+    position: absolute;
+    top:8.12em;
+    right:6.25em;
+    width: 6.25em;
+    height: 6.25em;
+    border: 1.25em solid #4d4dc4;
+    border-top:none;
+    border-left:none;
+    border-radius: 0.62em 0.62em 3.12em 0.62em;
+    animation: move-hand-right 6s infinite;
+    transform-origin:0  100% ;
+    transform-style: preserve-3d;
+}
+@keyframes move-hand-right{
+    50%{
+        transform: rotateX(-180deg);
+    }
+}
+.hand-right::before{
+    content: '';
+    position: absolute;
+    left: 4.68em;
+    width: 1.87em;
+    height: 1.25em;
+    background-color: #4d4dc4 ;
+    border-radius: 0 0 0.62em 0.62em ;
+}
+.hand-right::after{
+    content: '';
+    position: absolute;
+    left: 4.68em;
+    top:-0.62em;
+    width: 0.62em;
+    height: 1.25em;
+    background-color: #4d4dc4 ;
+    border-radius: 1.25em ;
+    box-shadow:1.25em 0 #4d4dc4;
+}
+.leg-left,
+.leg-right{
+    position: absolute;
+    top: 20em;
+    width: 1.87em;
+    height: 4.37em;
+    background-color: #2f319f ;
+    z-index:-1;
+
+}
+.leg-left{
+    left: 12.5em;
+}
+.leg-right{
+    right: 12.5em;
+    animation: stamp 2s infinite;
+}
+@keyframes stamp{
+    50%{
+        transform: translateY(-1.25em);
+        
+    }
+}
+.leg-left::before,
+.leg-right::before{
+    content: '';
+    position: absolute;
+    left: -0.31em;
+    top:3.12em;
+    width: 2.5em;
+    height: 1.25em;
+    background-color: #4d4dc4 ;
+    border-radius: 0.9em 0.93em 0 0;
+}
+.music-note{
+    position: absolute;
+    top: 6.25em;
+    left: 15.62em;
+    width: 2.5em;
+    height: 1.25em;
+    background-color: #181758 ;
+    transform: scale(0.2);
+    animation: whistle 2s infinite;
+
+}
+@keyframes whistle{
+    100%{
+        transform: translate(6.25em , -6.25em);
+        opacity:0;
+    }
+}
+.music-note::before{
+    content: '';
+    position: absolute;
+    width: 0.62em;
+    height:2.5em;
+    background-color: #181758 ;
+    box-shadow: 2.5em 0 #181758;
+}
+.music-note::after{
+    content: '';
+    position: absolute;
+    top:1.87em;
+    left:-0.31em;
+    width: 0.93em;
+    height:0.93em;
+    background-color: #181758 ;
+    border-radius: 50%;
+    box-shadow: 2.5em 0 #181758;
+}
+
+
+
+
 
